<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/tvDoctor"
        android:text="@string/doctor"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tvDate"
        android:text="@string/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tvTime"
        android:text="@string/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tvNotes"
        android:text="@string/Notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tvStatus"
        android:text="@string/Status"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
