<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="12dp"
    android:elevation="2dp">

    <TextView
        android:id="@+id/tvPatientName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/patient_name"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:text="@string/date"/>

    <TextView android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:text="@string/notes"/>

    <TextView android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:text="@string/status_pending"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textSize="14sp"
            android:text="@string/accepted" />

        <Button
            android:id="@+id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textSize="14sp"
            android:layout_marginLeft="50dp"
            android:text="@string/declined" />
    </LinearLayout>
</LinearLayout>