<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">


    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/profile_icon"
        android:src="@drawable/icon_profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="-60dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_license_number"
            android:inputType="text"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_full_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_full_name"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_contact2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_contact_number"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_save2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginBottom="16dp"
        style="@style/Widget.AppCompat.Button.Colored"/>


    <Button
        android:id="@+id/btn_logout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/black"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>