<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PatientSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image2"
    android:padding="24dp"
    tools:context=".PatientSignUpActivity">

    <EditText
        android:id="@+id/Firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textColorHint="@color/black"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:padding="12sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/Lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/Firstname"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:padding="12dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/ContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/Lastname"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:padding="12dp"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/ContactNumber"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:padding="12dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/CreateUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createusername"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:padding="12dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/CreateUsername"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:padding="12dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/NewPassword"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:padding="12dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/Record"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/record"
        android:textColor="@color/white"
        android:layout_below="@id/ConfirmPassword"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:layout_centerInParent="true"/>



</RelativeLayout>